name:           rtree
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jlh

executable rtree
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4, split
  ghc-options:     -Wall
  other-modules:   
                   Hilbert,
                   Rect

test-suite MainTest
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HUnit >= 1.2 && < 2, QuickCheck >= 2.4, test-framework >= 0.4.1, test-framework-quickcheck2, test-framework-hunit
  hs-source-dirs:  
                         tests,
                         src
  main-is:         MainTest.hs
  other-modules:   Rect

